2011-04-06  Andrey  <dev_null@ukr.net>

	* grub-core/video/fb/video_fb.c (grub_video_fb_setup): Silence older
	gcc warning.

2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Add few
	useful grub_dprintf's.

2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/fs.h (grub_dirhook_info): Use unsigned for 1-bit fields.

2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/00_header.in: Don't use LANG unless unifont is available.

2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	Output errors if theme loading failed.

	* grub-core/gfxmenu/gfxmenu.c (grub_gfxmenu_try): Move the call to
	grub_gfxterm_fullscreen on error paths to ...
	* grub-core/normal/menu.c (menu_init): ...here. Wait after showing
	theme loading error.

2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_RAW_SIZE): Let a bit more
	space for older compilers.
	(GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART): Likewise.

2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Detect spares
	and report them as not RAID members since they are useless for GRUB.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Likewise.

2011-04-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Increase LVM implementation robustness in order not to crash on
	configurations like pvmove. Previously code assumed that in some places
	only lvs or only pvs are used whereas it seems that they are used
	interchangeably.

	* grub-core/disk/lvm.c (read_node): New function.
	(read_lv): Use read_node.
	(grub_lvm_scan_device): Use only first mirror on pvmove'd lvs.
	Match volumes only at the end when all lvs are found. Take both
	pvs (first) and lvs (second) into account.
	* include/grub/lvm.h (grub_lvm_segment): Merge fields stripe_* and
	mirror_* into node_*. All users updated.
	(grub_lvm_stripe): Merge this ...